--- a/MaxApplication/Views/Login/UserPassword.cshtml
+++ b/MaxApplication/Views/Login/UserPassword.cshtml
@@ -479,6 +479,7 @@
                     // Add your next step logic here (e.g., redirect or show next form)
                     console.log('Form validated successfully');
                 }, 2000); // Simulate loading
+                window.location.href = '@Url.Action("Home", "ErpDashboard",new{area=""})';
                
             }
         });
